--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,10 +6,10 @@ cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [workspace]
-members = ["programs/template"]
+members = ["programs/bonds"]
 
 [programs.localnet]
-template = "R9PatsTac3Y3UpC7ihYMMgzAQCe1tXnVvkSQ8DtLWUc"
+bonds = "R9PatsTac3Y3UpC7ihYMMgzAQCe1tXnVvkSQ8DtLWUc"
 
 [scripts]
 test = "ts-mocha -p ./tsconfig.json -t 1000000"
