Claim bond implemented

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test:modify-bond-sale": "anchor test --skip-build tests/modify-bond-sale.spec.ts",
     "test:claim-quote": "anchor test --skip-build tests/claim-quote.spec.ts",
     "test:end-bond-sale": "anchor test --skip-build tests/end-bond-sale.spec.ts",
+    "test:claim-bond": "anchor test --skip-build tests/claim-bond.spec.ts",
     "build": "cd sdk && npm run build"
   },
   "dependencies": {
