--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@project-serum/serum": "^0.13.58",
     "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.25.0",
-    "ts-mocha": "^8.0.0"
+    "ts-mocha": "^9.0.0"
   },
   "devDependencies": {
-    "@template-labs/sdk": "file:sdk",
+    "@invariant-labs-bonds/sdk": "file:sdk",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "chai": "^4.3.4",
