--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test:all": "npm run test:init-bond-sale && npm run test:create-bond && npm run test:modify-bond-sale && npm run test:claim-quote && npm run test:end-bond-sale && npm run test:claim-bond",
+    "test:all": "npm run test:init-bond-sale && npm run test:create-bond && npm run test:modify-bond-sale && npm run test:claim-quote && npm run test:end-bond-sale && npm run test:claim-bond && npm run test:slippage",
     "test:init-bond-sale": "anchor test --skip-build tests/init-bond-sale.spec.ts",
     "test:create-bond": "anchor test --skip-build tests/create-bond.spec.ts",
     "test:multiple-bonds": "anchor test --skip-build tests/multiple-bonds.spec.ts",
@@ -8,6 +8,7 @@
     "test:claim-quote": "anchor test --skip-build tests/claim-quote.spec.ts",
     "test:end-bond-sale": "anchor test --skip-build tests/end-bond-sale.spec.ts",
     "test:claim-bond": "anchor test --skip-build tests/claim-bond.spec.ts",
+    "test:slippage": "anchor test --skip-build tests/slippage.spec.ts",
     "build": "cd sdk && npm run build"
   },
   "dependencies": {
