--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["blockhash", "bondv", "divn", "lamports"]
+  "cSpell.words": ["blockhash", "bondv", "divn", "lamports", "muln"]
 }
