--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test:all": "npm run test:init-bond-sale && npm run test:create-bond && npm run test:modify-bond-sale && npm run test:claim-quote && npm run test:end-bond-sale && npm run test:claim-bond && npm run test:slippage && npm run test:withdraw-fee",
+    "test:all": "npm run test:init-bond-sale && npm run test:create-bond && npm run test:modify-bond-sale && npm run test:claim-quote && npm run test:end-bond-sale && npm run test:claim-bond && npm run test:slippage && npm run test:withdraw-fee && npm run test:change-fee",
     "test:init-bond-sale": "anchor test --skip-build tests/init-bond-sale.spec.ts",
     "test:create-bond": "anchor test --skip-build tests/create-bond.spec.ts",
     "test:multiple-bonds": "anchor test --skip-build tests/multiple-bonds.spec.ts",
@@ -10,6 +10,7 @@
     "test:claim-bond": "anchor test --skip-build tests/claim-bond.spec.ts",
     "test:slippage": "anchor test --skip-build tests/slippage.spec.ts",
     "test:withdraw-fee": "anchor test --skip-build tests/withdraw-fee.spec.ts",
+    "test:change-fee": "anchor test --skip-build tests/change-fee.spec.ts",
     "build": "cd sdk && npm run build"
   },
   "dependencies": {
